fixed contact page font sizing and instagram carousel slides to show on mobile

--- a/src/assets/styles/pages/_contact.scss
+++ b/src/assets/styles/pages/_contact.scss
@@ -12,6 +12,10 @@
     .contact__socials {
       margin-top: 40px;
       text-align: center;
+      transition: 0.3s ease;
+      @media (max-width: 575px) {
+        font-size: 14px;
+      }
       p {
         margin-bottom: 8px;
         letter-spacing: 1px;
